--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.2'
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
+    compile 'com.squareup.okhttp3:okhttp:3.11.0'
 }
