--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -18,3 +18,8 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
     compile 'com.squareup.okhttp3:okhttp:3.11.0'
 }
+
+javadoc {
+    source = sourceSets.main.allJava
+    classpath = configurations.compile
+}
