--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -10,11 +10,15 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     mavenLocal()
+    maven {
+        url "${nexusUrl}/repository/maven-releases/"
+    }
+
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.2'
-    
+    compile group: 'com.socketlabs', name: 'injectionApi', version: '1.0.0'
 }
