--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -20,33 +20,39 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
     compile 'com.squareup.okhttp3:okhttp:3.11.0'
 }
-/*
+
 jar {
     manifest {
         attributes 'Implementation-Title': 'SocketLabs Java',
                 'Implementation-Version': version
     }
 }
-*/
-
 
 javadoc {
     source = sourceSets.main.allJava
     classpath = configurations.compile
 }
 
+signing {
+    required { gradle.taskGraph.hasTask("uploadArchives") }
+    sign configurations.archives
+}
+
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: "file:///out/artifacts/")
 
-            //beforeDeployment {
-            //    MavenDeployment deployment -> signing.signPom(deployment)
-            //}
+            beforeDeployment {
+                MavenDeployment deployment -> signing.signPom(deployment)
+            }
 
-            //repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-            //    authentication(userName: sonatypeUsername, password: sonatypePassword)
-            //}
+            repository(url: "${nexusUrl}/repository/maven-releases/") {
+                authentication(userName: nexusUsername, password: nexusPassword)
+            }
+
+            snapshotRepository(url: "${nexusUrl}/repository/maven-snapshots") {
+                authentication(userName: nexusUsername, password: nexusPassword)
+            }
 
             pom.project {
 
