--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -9,10 +9,10 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    mavenLocal()
-    maven {
-        url "${nexusUrl}/repository/maven-releases/"
-    }
+    //mavenLocal()
+    //maven {
+    //    url "${nexusUrl}/repository/maven-releases/"
+    //}
 
 }
 
