--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.socketlabs'
-version '1.0.0'
+version '1.0.1'
 
 sourceCompatibility = 1.8
 
@@ -16,8 +16,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.2'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.2'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.5'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
     compile 'com.squareup.okhttp3:okhttp:3.11.0'
 }
@@ -75,7 +75,7 @@ uploadArchives {
 
                 groupId 'com.socketlabs'
                 artifactId 'injectionApi'
-                version '1.0.0'
+                version '1.0.1'
 
                 name 'socketlabs-java'
                 packaging 'jar'
