--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -9,8 +9,8 @@ def baseGroupId = "com.socketlabs"
 def baseArtifactId = 'injectionApi'
 
 def computeVersion() {
-    def baseVersion = "1.0.0"
-    def release = false
+    def baseVersion = "1.0.1"
+    def release = true
     if (release) {
         return "${baseVersion}"
     }
@@ -80,8 +80,13 @@ uploadArchives {
                 MavenDeployment deployment -> signing.signPom(deployment)
             }
 
-            repository(url: localRepoUrl)
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
+            }
 
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
+            }
             pom.project {
 
                 groupId "${baseGroupId}"
