--- a/injectionApi/gradle.properties.example
+++ b/injectionApi/gradle.properties.example
@@ -2,5 +2,5 @@ signing.keyId=
 signing.password=
 signing.secretKeyRingFile=
 
-nexusUsername=
-nexusPassword=
+sonatypeUsername=
+sonatypePassword=
