--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -9,8 +9,8 @@ def baseGroupId = "com.socketlabs"
 def baseArtifactId = 'injectionApi'
 
 def computeVersion() {
-    def baseVersion = "1.0.4"
-    def release = true
+    def baseVersion = "1.0.5"
+    def release = false
     if (release) 
         return "${baseVersion}"    
     else 
@@ -33,8 +33,8 @@ compileJava {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.8'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.11.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
     compile group: 'com.google.guava', name: 'guava', version: '12.0'
     compile 'com.squareup.okhttp3:okhttp:3.11.0'
 }
@@ -76,18 +76,22 @@ uploadArchives {
     repositories {
         mavenDeployer {
 
-            beforeDeployment {
+            /*beforeDeployment {
                 MavenDeployment deployment -> signing.signPom(deployment)
             }
+            */
 
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+            publishToMavenLocal
+
+
+         /*   repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
                 authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
                 authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
-            
+         */
             pom.project {
 
                 groupId "${baseGroupId}"
