--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.fasterxml.jackson.core:jackson-core:2.11.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
-    compile group: 'com.google.guava', name: 'guava', version: '12.0'
+    compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
     compile 'com.squareup.okhttp3:okhttp:3.11.0'
 }
 
