--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -10,7 +10,7 @@ def baseArtifactId = 'injectionApi'
 
 def computeVersion() {
     def baseVersion = "1.0.5"
-    def release = false
+    def release = true
     if (release) 
         return "${baseVersion}"    
     else 
@@ -76,22 +76,18 @@ uploadArchives {
     repositories {
         mavenDeployer {
 
-            /*beforeDeployment {
+            beforeDeployment {
                 MavenDeployment deployment -> signing.signPom(deployment)
             }
-            */
 
-            publishToMavenLocal
-
-
-         /*   repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
                 authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
                 authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
-         */
+
             pom.project {
 
                 groupId "${baseGroupId}"
