--- a/injectionApi/pom.xml
+++ b/injectionApi/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.socketlabs</groupId>
   <artifactId>injectionApi</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>socketlabs-java</name>
   <description>SocketLabs Email Delivery Java library</description>
   <url>https://github.com/socketlabs/socketlabs-java/</url>
@@ -23,7 +23,7 @@
       <id>david-schrenker</id>
       <name>David Schrenker</name>
       <email>david.schrenker@socketlabs.com</email>
-      <organization>org.apache.maven.model.Organization@749a2ed</organization>
+      <organization>org.apache.maven.model.Organization@15ba5d1c</organization>
       <roles>
         <role>Developer</role>
       </roles>
@@ -31,7 +31,7 @@
     <developer>
       <id>rbrazuk</id>
       <name>Ross Brazuk</name>
-      <organization>org.apache.maven.model.Organization@47f054e3</organization>
+      <organization>org.apache.maven.model.Organization@3cf2a6e7</organization>
       <roles>
         <role>Developer</role>
       </roles>
@@ -40,7 +40,7 @@
   <contributors>
     <contributor>
       <name>Ryan Lydzinski</name>
-      <organization>org.apache.maven.model.Organization@1b7c127f</organization>
+      <organization>org.apache.maven.model.Organization@2e482819</organization>
       <roles>
         <role>Intern</role>
       </roles>
