--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -13,8 +13,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.11.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
-    compile group: 'com.socketlabs', name: 'injectionApi', version: '1.2.1'
+    testCompile group: 'junit', name: 'junit', version: '4.9.2'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.14.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
+    compile group: 'com.socketlabs', name: 'injectionApi', version: '1.4.0-SNAPSHOT'
 }
