--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -65,13 +65,8 @@ uploadArchives {
             beforeDeployment {
                 MavenDeployment deployment -> signing.signPom(deployment)
             }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
-                authentication(userName: sonatypeUsername, password: sonatypePassword)
-            }
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-                authentication(userName: sonatypeUsername, password: sonatypePassword)
-            }
+            repository(url: "file:///projects/build/repo")
+            snapshotRepository(url: "file:///projects/build/repo/snapshot")
 
             pom.project {
                 groupId "${baseGroupId}"
