--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -16,5 +16,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.9.2'
     compile 'com.fasterxml.jackson.core:jackson-core:2.14.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
-    compile group: 'com.socketlabs', name: 'injectionApi', version: '1.4.0-SNAPSHOT'
+    compile group: 'com.socketlabs', name: 'injectionApi', version: '1.4.2'
 }
