--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.14.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
     compile group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
-    compile 'com.squareup.okhttp3:okhttp:4.10.0'
+    compile 'org.apache.httpcomponents:httpclient:4.5.14'
+    compile 'org.apache.httpcomponents:httpasyncclient:4.1.5'
 
 }
 jar {
@@ -62,9 +63,6 @@ artifacts {
 uploadArchives {
     repositories {
         mavenDeployer {
-            beforeDeployment {
-                MavenDeployment deployment -> signing.signPom(deployment)
-            }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
                 authentication(userName: sonatypeUsername, password: sonatypePassword)
@@ -138,7 +136,7 @@ uploadArchives {
                 }
                 contributors {
                     contributor {
-                        name 'Ryan Lydzinski'
+                        name 'Ryan Kadzinski'
                         organization {
                             name 'socketlabs'
                             url 'https://github.com/socketlabs'
