debugging HttpClient changes

--- a/injectionApi/build.gradle
+++ b/injectionApi/build.gradle
@@ -4,11 +4,13 @@ plugins {
     id 'maven-publish'
     id 'signing'
 }
+
+def baseTitle ="SocketLabs Java"
 def baseGroupId = "com.socketlabs"
-def baseArtifactId = 'injectionApi'
-def computeVersion() {
+def baseArtifactId = "injectionApi"
+static def computeVersion() {
     def baseVersion = "1.4.4"
-    def release = true
+    def release = false
     if (release)
         return "${baseVersion}"
     else
@@ -16,29 +18,38 @@ def computeVersion() {
 }
 group "${baseGroupId}"
 version = computeVersion()
+
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 repositories {
     mavenCentral()
     mavenLocal()
 }
+
 compileJava {
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
 }
+
 dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.14.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
     compile group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
     compile 'org.apache.httpcomponents:httpclient:4.5.14'
     compile 'org.apache.httpcomponents:httpasyncclient:4.1.5'
-
 }
+
 jar {
     manifest {
-        attributes 'Implementation-Title': 'SocketLabs Java',
+        attributes(
+                'Implementation-Title': baseTitle,
                 'Implementation-Version': version
+        )
     }
 }
+
+
 signing {
     required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
