--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -13,8 +13,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.9.2'
+
     compile 'com.fasterxml.jackson.core:jackson-core:2.14.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
-    compile group: 'com.socketlabs', name: 'injectionApi', version: '1.4.2'
+    compile 'org.apache.httpcomponents:httpclient:4.5.14'
+    compile 'org.apache.httpcomponents:httpasyncclient:4.1.5'
+    compile group: 'com.socketlabs', name: 'injectionApi', version: '1.4.4-SNAPSHOT'
 }
