--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -8,15 +8,17 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenLocal()
     mavenCentral()
+    maven {
+        url = uri("https://central.sonatype.com/repository/maven-snapshots/")
+    }
+    mavenLocal()
 }
 
 dependencies {
-
     compile 'com.fasterxml.jackson.core:jackson-core:2.14.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
     compile 'org.apache.httpcomponents:httpclient:4.5.14'
     compile 'org.apache.httpcomponents:httpasyncclient:4.1.5'
-    compile group: 'com.socketlabs', name: 'injectionApi', version: '1.4.4-SNAPSHOT'
+    compile group: 'com.socketlabs', name: 'injectionApi', version: '2.0.1-SNAPSHOT'
 }
